infrastructure/base/infra-control/kubeview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeview
  namespace: infra-control
  labels:
    app: kubeview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeview
  template:
    metadata:
      labels:
        app: kubeview
    spec:
      serviceAccountName: kubeview
      containers:
        - name: kubeview
          image: ghcr.io/benc-uk/kubeview:latest
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: '128Mi'
              cpu: '10m'
---
apiVersion: v1
kind: Service
metadata:
  name: kubeview
  namespace: infra-control
  labels:
    app: kubeview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: kubeview
